<resources>
    <string name="app_name">InTouch</string>
    <string name="contact_frequency_in_days">Call frequency in days</string>
    <string name="text_frequency_in_days">Text frequency in days</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="what_time_should_we_notify_you">What time should we notify you?</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="widget_empty">Please add a contact to the list!</string>
    <string name="contact_widget_label" translatable="false">InTouch!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fill_out_empty_fields">Please fill out all fields</string>
    <string name="message_1">Hi</string>
    <string name="message_2">Hey</string>
    <string name="message_3">What\'s up?</string>
    <string name="message_4">How are you?</string>
    <string name="upgrade_for_more_messages_string">For more messages please upgrade</string>
    <string name="ACTION_UPGRADE">UPGRADE</string>
    <string name="message_sent_string">Message Sent</string>

    <string name="paid_version">tk.talcharnes.intouch.paid</string>
    <string name="free_version">tk.talcharnes.intouch.free</string>
    <string name="add_message_to_list">Add message to list</string>
    <string name="choose_existing_contact">Choose existing contact</string>
    <string name="AM">A.M.</string>
    <string name="PM">P.M.</string>
    <string name="text_frequency_0_error">Text frequency can\'t be 0 days</string>
    <string name="call_frequency_0_error">Call frequency can\'t be 0 days</string>
    <string name="please_log_in">Please log in!</string>
    <string name="add_new_contact_description">Add a new contact</string>
    <string name="send_text_description_string">"Send a text message to "</string>
    <string name="call_description">"Call "</string>
    <string name="add_message_to_list_description">Add message to list</string>
    <string name="message_empty_string">Message can not be empty</string>
    <string name="message_list_empty_error">Message list can\'t be empty!</string>
    <string name="widget_send_text_content_description">"Send a random text message from list to "</string>
    <string name="widget_call_content_description">"Call "</string>
    <string name="messages_to_send_contact">Messages to send contact</string>
    <string name="firstname_last_temp_text">Firstname Last</string>
    <string name="upgrade_google_play_services_string">Please upgrade Google Play Services for all features</string>
    <string name="coming_soon_string">Coming Soon</string>
    <string name="action_settings">Settings</string>
    <string name="change_text_app_title">Change Text App</string>
    <string name="change_text_app_summary">Use alternative apps to send text messages such as Whatsapp, Viber, Etc.</string>
    <string name="call_immediately_title">Call immediately</string>
    <string name="call_immediately_summary">Call immediately: This may result in accidental calls</string>

</resources>


